Preserve last passing candidate for org.glassfish.grizzly:grizzly-http-servlet:2.2.1